--- a/input/08-1.md
+++ b/input/08-1.md
@@ -73,7 +73,10 @@
 
 ## ⑦ HTTPのリクエスト・レスポンスとは何か。またその関係性は。
 
-
+* リクエスト：クライアントがサーバに対してWebページのデータを要求すること。
+* レスポンス：サーバーがクライアントに対してリクエストに対する結果やデータを返すためのメッセージのこと。
+* 関係性  
+![Alt text](../img/08-1_2.png)
 
 ## ⑧ HTTPリクエストのGET・POSTとは何か。またその違いは。
 
