--- a/input/08-1.md
+++ b/input/08-1.md
@@ -75,7 +75,7 @@
 
 * リクエスト：クライアントがサーバに対してWebページのデータを要求すること。
 * レスポンス：サーバーがクライアントに対してリクエストに対する結果やデータを返すためのメッセージのこと。
-* 関係性
+* 関係性：下記の通り。
 1. クライアントがリクエストをサーバーに送信すると、サーバーはそのリクエストを受け取って処理する。
 2. サーバーは処理の結果としてレスポンスを生成し、それをクライアントに送信する。
 3. クライアントは受け取ったレスポンスを解釈して、ブラウザにコンテンツを表示したり、アプリケーションで処理する。
