--- a/input/08-1.md
+++ b/input/08-1.md
@@ -83,7 +83,10 @@
 
 ## ⑧ HTTPリクエストのGET・POSTとは何か。またその違いは。
 
-
+* GET：指定されたURLのリソース（Webサイトの内容など）を取り出すメソッド（関数）のこと。  
+![Alt text](../img/08-1_3.png)
+* POST：クライアントからの入力内容をWebサーバに送信するメソッド（関数）のこと。  
+![Alt text](../img/08-1_4.png)
 
 ## ⑨ .envファイルとは何か。またどのような目的で使用されるか。
 
