--- a/input/08-1.md
+++ b/input/08-1.md
@@ -87,6 +87,12 @@
 ![Alt text](../img/08-1_3.png)
 * POST：クライアントからの入力内容をWebサーバに送信するメソッド（関数）のこと。  
 ![Alt text](../img/08-1_4.png)
+* 違い
+  * データの伝送方法：GETはデータをURLの文字列に含めて伝送し、POSTはリクエストボディにデータを格納して伝送する。  
+  ※リクエストボディ：HTTPリクエストメッセージの一部であり、クライアントがサーバーに対して送信するデータや情報が格納される領域のこと。
+  * データの表示：GETはブラウザのアドレスバーに表示され、ブックマークに保存できるのに対して、POSTはブラウザのアドレスバーには表示されず、直接ブックマークすることが難しい。
+  * データの長さ：GETはURLの制限に従ってデータの長さが制約されるのに対して、POSTは制約が緩く、大量のデータを送信できる。
+  * 安全性と再実行性：GETはデータがURLに表示されるため、ブラウザの履歴やキャッシュに残りやすく、再実行されやすいのに対して、POSTはデータがリクエストボディに含まれるため、再実行の可能性が低い。
 
 ## ⑨ .envファイルとは何か。またどのような目的で使用されるか。
 
