--- a/input/08-1.md
+++ b/input/08-1.md
@@ -96,7 +96,10 @@
 
 ## ⑨ .envファイルとは何か。またどのような目的で使用されるか。
 
-
+アプリの環境変数を保存するためのファイルのことで、アプリの動作に影響を与える設定や構成の値が格納されている。主な目的は下記の通り。
+* 機密情報の保護：セキュリティに影響を与える機密情報（APIキー、データベースの接続情報、秘密鍵など）を保存できる。
+* 設定の柔軟性：アプリが動作する環境ごとに異なる設定（開発、本番、テストなど）で管理できる。
+* 設定の変更が簡単：.envファイルの値を変更するだけで設定を調整でき、データベースの接続先やAPIエンドポイントを切り替える際などに便利。
 
 ## ⑩ Laravelにおけるアプリケーションキーとは何か。
 
