--- a/input/08-1.md
+++ b/input/08-1.md
@@ -104,7 +104,7 @@
 
 ## ⑩ Laravelにおけるアプリケーションキーとは何か。
 
-
+アプリケーションのセキュリティや暗号化の際に使用されるランダムな英数字３２文字のこと。「php artisan key:generate」コマンドを実行すると、.env環境ファイルの「APP_KEY」欄に設定される。
 
 ## ⑪ Laravelにおけるartisanコマンドとは何か。
 
