--- a/input/08-2.md
+++ b/input/08-2.md
@@ -1,5 +1,10 @@
 ## ① 画面設計におけるワイヤーフレームとは何か。
 
-
+Webサイトやサービスなどを制作する上で、ページの構成を示す基本的なレイアウト図のこと。特徴は下記の通り。
+* 構造がシンプル
+* 修正しやすい
+* コンセプトの共有
+* 画面遷移の流れ
+* 機能の配置
 
 ## ② LaravelにおけるBladeとは何か。
