--- a/input/08-3.md
+++ b/input/08-3.md
@@ -1,5 +1,11 @@
 ## ① RESTfulとは何か。
 
+REST（Representational State Transfer）はデザイン原則や制約のことで、これに則って実装されたアプリをRESTfulと呼ぶ。  
+RESTの４原則は下記の通り。
+1. 統一インターフェース：情報をやり取りする方法をあらかじめ定義しておくこと。例えば、取得・登録・更新・削除は、HTTPメソッドのGET・POST・PUT（PATCH）・DELETEにすることが、統一インターフェイスにあたる。
+2. アドレス可能性：全ての情報（リソース）が一意のURI（Uniform Resource Identifier）を持つこと。
+3. 接続性：ある情報に別の情報へのリンクを埋め込むことができること。
+4. ステートレス性：サーバーはクライアントの状態を保持せず、やり取りが１回で完結する状態のこと。
 
 ## ② RESTful思想の場合、以下のパターンはどのようなURLになるか。なお、ブログ投稿(post)を例に考えてください。例えば一覧表示の場合、URLは/posts、HTTPメソッドはGETになります。
 
