--- a/input/08-3.md
+++ b/input/08-3.md
@@ -11,10 +11,25 @@ RESTの４原則は下記の通り。
 
 ### 1. データの一覧表示
 
+* URL: /posts
+* HTTPメソッド: GET
+
 ### 2. データの追加
+
+* URL: /posts
+* HTTPメソッド: POST
 
 ### 3. ID指定での特定データ表示
 
+* URL: /posts/{id}
+* HTTPメソッド: GET
+
 ### 4. ID指定での特定データ更新
 
+* URL: /posts/{id}
+* HTTPメソッド: PUTまたはPATCH
+
 ### 5. ID指定での特定データ削除
+
+* URL: /posts/{id}
+* HTTPメソッド: DELETE
