--- a/output/08-1/08-1_1.md
+++ b/output/08-1/08-1_1.md
@@ -1,1 +1,23 @@
 # 開発用Gitブランチの準備
+
+### ブランチ情報の最新化
+#### $ git fetch
+
+### ローカルリポジトリのブランチ一覧を表示
+#### $ git branch
+    * master
+
+### リモートリポジトリのブランチ一覧を表示
+#### $ git branch -r
+    origin/master
+
+# 作業用ブランチ作成
+$ git branch dev_basis01 origin/master
+→masterリモートブランチからdev_basis01ローカルブランチを作成
+$ git branch
+→作成したdev_basis01がローカルブランチ一覧に表示される
+→この時点で作業ブランチは「dev_basis01」以外となっている
+$ git checkout dev_basis01
+→作業ブランチを「dev_basis01」に切り替え
+$ git branch
+→ローカルブランチ一覧が表示され、作業ブランチが「dev_basis01」になっていることが確認できる
