--- a/output/08-1/08-1_1.md
+++ b/output/08-1/08-1_1.md
@@ -15,7 +15,7 @@
 
 ### 作業用ブランチの作成
 #### $ git branch dev_basis01 origin/master
-※ masterリモートブランチからdev_basis01ローカルブランチを作成
+※ リモートのmasterブランチを、dev_basis01という名前でローカルに作成
 
     branch 'dev_basis01' set up to track 'origin/master'.
 
