--- a/output/08-1/08-1_2.md
+++ b/output/08-1/08-1_2.md
@@ -1,1 +1,25 @@
 # Laravelアプリケーション初期設定
+
+## 環境設定ファイル準備
+
+### 用意されている .env.exampleファイル（サンプルファイル）を .envファイルとしてコピー
+#### $ cp .env.example .env
+#### $ cat .env
+
+    APP_KEY=
+
+### .envファイルにアプリケーションキーを設定
+#### $ php artisan key:generate
+
+    INFO  Application key set successfully.
+
+#### $ cat .env
+
+    APP_KEY=base64:"アプリケーションキー"
+
+# カリキュラム07-1で作ったDBと接続するために、.envファイルのDB接続関連情報を編集
+$ vi .env
+→ .envファイルが開かれたら、「DB_」で始まる値を適切な形に変更しましょう。
+　　DB_DATABASE=blog（6-1で作成したデータベース名）
+　　DB_USERNAME=dbuser（6-1で作成したユーザー）
+　　DB_PASSWORD=(dbuserのパスワード)（6-1で作成したdbuserのパスワード。()は必要ないので気をつけてください）
