--- a/output/08-1/08-1_2.md
+++ b/output/08-1/08-1_2.md
@@ -14,12 +14,22 @@
     INFO  Application key set successfully.
 
 #### $ cat .env
+※ APP_KEY欄に文字列が追加されている。
 
     APP_KEY=base64:"アプリケーションキー"
 
-# カリキュラム07-1で作ったDBと接続するために、.envファイルのDB接続関連情報を編集
-$ vi .env
-→ .envファイルが開かれたら、「DB_」で始まる値を適切な形に変更しましょう。
-　　DB_DATABASE=blog（6-1で作成したデータベース名）
-　　DB_USERNAME=dbuser（6-1で作成したユーザー）
-　　DB_PASSWORD=(dbuserのパスワード)（6-1で作成したdbuserのパスワード。()は必要ないので気をつけてください）
+### カリキュラム07-1で作ったDBと接続するために、.envファイルのDB接続関連情報を編集
+#### $ vi .env
+※ 「DB_」で始まる値を適切な形に変更する。
+
+    DB_DATABASE=blog（6-1で作成したデータベース名）
+    DB_USERNAME=dbuser（6-1で作成したユーザー）
+    DB_PASSWORD=(dbuserのパスワード)（6-1で作成したdbuserのパスワード。()は必要ない）
+
+## Laravelアプリケーションのタイムゾーン設定
+
+### 「config/app.php」に定義されているtimezoneの値を変更
+#### $ cd config
+#### $ vi app.php
+
+    'timezone' => 'Asia/Tokyo',
