--- a/output/08-1/08-1_3.md
+++ b/output/08-1/08-1_3.md
@@ -1,1 +1,17 @@
 # Laravelアプリケーション基礎実装
+
+## Postコントローラークラスの作成
+
+### 「PostController」という名前のコントローラーを作成
+#### $ php artisan make:controller PostController
+
+    INFO  Controller [app/Http/Controllers/PostController.php] created successfully.
+
+### 対象のコントローラークラスが作成されていることを確認
+#### $ ls -l ~/blog/app/Http/Controllers/
+
+    total 8
+    -rw-rw-r-- 1 ec2-user ec2-user 361 Jan 12 14:26 Controller.php
+    -rw-rw-r-- 1 ec2-user ec2-user 121 Jan 15 12:43 PostController.php
+
+## Postテーブル操作用モデルクラスの作成
