--- a/output/08-1/08-1_3.md
+++ b/output/08-1/08-1_3.md
@@ -15,3 +15,28 @@
     -rw-rw-r-- 1 ec2-user ec2-user 121 Jan 15 12:43 PostController.php
 
 ## Postテーブル操作用モデルクラスの作成
+
+### 「Post」という名前のモデルを作成
+#### $ php artisan make:model Post --migration
+※ 「--migration」オプションで、データベースを生成する際の設計図となるマイグレーションクラスを同時に作成する。
+
+    INFO  Model [app/Models/Post.php] created successfully.
+
+    INFO  Migration [database/migrations/2024_01_15_125135_create_posts_table.php] created successfully.
+
+### 対象のモデルクラスが作成されていることを確認
+#### $ ls -l ~/blog/app/Models
+
+    total 8
+    -rw-rw-r-- 1 ec2-user ec2-user 175 Jan 15 12:51 Post.php
+    -rw-rw-r-- 1 ec2-user ec2-user 916 Jan 12 14:26 User.php
+
+### 対象のマイグレーションクラスが作成されていることを確認
+#### $ ls -l ~/blog/database/migrations/
+
+    total 20
+    -rw-rw-r-- 1 ec2-user ec2-user 793 Jan 12 14:26 2014_10_12_000000_create_users_table.php
+    -rw-rw-r-- 1 ec2-user ec2-user 671 Jan 12 14:26 2014_10_12_100000_create_password_resets_table.php
+    -rw-rw-r-- 1 ec2-user ec2-user 810 Jan 12 14:26 2019_08_19_000000_create_failed_jobs_table.php
+    -rw-rw-r-- 1 ec2-user ec2-user 898 Jan 12 14:26 2019_12_14_000001_create_personal_access_tokens_table.php
+    -rw-rw-r-- 1 ec2-user ec2-user 569 Jan 15 12:51 2024_01_15_125135_create_posts_table.php
