--- a/output/08-1/08-1_3.md
+++ b/output/08-1/08-1_3.md
@@ -40,3 +40,32 @@
     -rw-rw-r-- 1 ec2-user ec2-user 810 Jan 12 14:26 2019_08_19_000000_create_failed_jobs_table.php
     -rw-rw-r-- 1 ec2-user ec2-user 898 Jan 12 14:26 2019_12_14_000001_create_personal_access_tokens_table.php
     -rw-rw-r-- 1 ec2-user ec2-user 569 Jan 15 12:51 2024_01_15_125135_create_posts_table.php
+
+## Postコントローラークラスの実装
+
+### コントローラーに修正を加える
+※ 左のメニューバーからPostController.phpを開いて修正する。
+
+    <?php
+
+    namespace App\Http\Controllers;
+
+    use Illuminate\Http\Request;
+    //use宣言は外部にあるクラスをPostController内にインポートできる。
+    //この場合、App\Models内のPostクラスをインポートしている。
+    use App\Models\Post;
+    /**
+    * Post一覧を表示する
+    * 
+    * @param Post Postモデル
+    * @return array Postモデルリスト
+    */
+    class PostController extends Controller
+    {
+        public function index(Post $post)//インポートしたPostをインスタンス化して$postとして使用。
+        {
+            return $post->get();//$postの中身を戻り値にする。
+        }
+    }
+
+## Postコントローラーへのルーティング設定
