--- a/output/08-1/08-1_3.md
+++ b/output/08-1/08-1_3.md
@@ -44,7 +44,7 @@
 ## Postコントローラークラスの実装
 
 ### コントローラーに修正を加える
-※ 左のメニューバーからPostController.phpを開いて修正する。
+※ 左のメニューバーから「~/blog/app/Http/Controllers/PostController.php」を開いて下記のように修正する。
 
     <?php
 
@@ -69,3 +69,31 @@
     }
 
 ## Postコントローラーへのルーティング設定
+
+### URLとコントローラーのマッピングを行う
+※ 左のメニューバーから「~/blog/routes/web.php」を開いて下記のように修正する。
+
+    <?php
+
+    use Illuminate\Support\Facades\Route;
+    use App\Http\Controllers\PostController;  //外部にあるPostControllerクラスをインポート。
+
+    /*
+    |--------------------------------------------------------------------------
+    | Web Routes
+    |--------------------------------------------------------------------------
+    |
+    | Here is where you can register web routes for your application. These
+    | routes are loaded by the RouteServiceProvider within a group which
+    | contains the "web" middleware group. Now create something great!
+    |
+    */
+
+    Route::get('/', function () {
+        return view('welcome');
+    });
+
+    Route::get('/posts', [
+        PostController::class,
+        'index'
+    ]);
