--- a/output/08-1/08-1_5.md
+++ b/output/08-1/08-1_5.md
@@ -88,3 +88,6 @@
 ### 「Merge pull request」をクリック
 
 ![Alt text](../../img/08-1_5_1.png)
+
+### 「Confirm merge」をクリック
+※ 自分でプルリクエストを作成し、自分でそのリクエストを承認した。
