--- a/output/08-2/08-2_1.md
+++ b/output/08-2/08-2_1.md
@@ -7,7 +7,7 @@
 
     Switched to branch 'master'
 
-### ローカルリポジトリ内のブランチ情報の最新化
+### リモートリポジトリの最新情報をローカルリポジトリに取り込む
 #### $ git fetch
 
     remote: Enumerating objects: 1, done.
@@ -17,19 +17,45 @@
     From github.com:kuratea52/lev-laravel
     7c9f14f..a6a1346  master     -> origin/master
 
-### fetchした情報を現在のブランチに反映
+### fetchした情報をローカルブランチに反映
 #### $ git merge origin/master
+
+    Updating 7c9f14f..a6a1346
+    Fast-forward
+    app/Http/Controllers/PostController.php                      | 23 +++++++++++++++++++++++
+    app/Models/Post.php                                          | 11 +++++++++++
+    config/app.php                                               |  2 +-
+    database/migrations/2024_01_15_125135_create_posts_table.php | 31 +++++++++++++++++++++++++++++++
+    routes/web.php                                               |  6 ++++++
+    5 files changed, 72 insertions(+), 1 deletion(-)
+    create mode 100644 app/Http/Controllers/PostController.php
+    create mode 100644 app/Models/Post.php
+    create mode 100644 database/migrations/2024_01_15_125135_create_posts_table.php
 
 ### 作業用ブランチ作成
 #### $ git branch dev_basis02 origin/master
-→masterリモートブランチからdev_basis02ローカルブランチを作成
+※ masterリモートブランチを、「dev_basis02」という名前でローカルにブランチ作成
 
+    branch 'dev_basis02' set up to track 'origin/master'.
+
+### dev_basis02がローカルブランチ一覧に表示されることを確認
 #### $ git branch
-→作成したdev_basis02がローカルブランチ一覧に表示される
-→この時点で作業ブランチは「dev_basis02」以外となっている
+※ この時点で作業ブランチは「dev_basis02」以外となっている
 
+      dev_basis01
+      dev_basis02
+    * master
+
+### 作業ブランチを「dev_basis02」に切り替え
 #### $ git checkout dev_basis02
-→作業ブランチを「dev_basis02」に切り替え
+※ 結果２行目は、リモートのmasterブランチとローカルのdev_basis02ブランチが同じ状態であることを意味している。
 
+    Switched to branch 'dev_basis02'
+    Your branch is up to date with 'origin/master'.
+
+### 作業ブランチが「dev_basis02」になっていることを確認
 #### $ git branch
-→ローカルブランチ一覧が表示され、作業ブランチが「dev_basis02」になっていることが確認できる
+
+      dev_basis01
+    * dev_basis02
+      master
