--- a/output/08-2/08-2_2.md
+++ b/output/08-2/08-2_2.md
@@ -33,3 +33,11 @@
     Route::get('/', function() {
         return view('posts.index');
     });
+
+### アプリを起動して、index.blade.phpの内容が反映されていることを確認
+#### $ php artisan serve --port=8080
+
+## Viewファイルへのデータ埋め込み
+
+### ルーティング設定（web.php）を以下のように変更する。
+※ Controllerでデータを取得し、Controllerからデータを受け渡す形でViewを呼び出す。
