--- a/output/08-2/08-2_2.md
+++ b/output/08-2/08-2_2.md
@@ -41,3 +41,36 @@
 
 ### ルーティング設定（web.php）を以下のように変更する。
 ※ Controllerでデータを取得し、Controllerからデータを受け渡す形でViewを呼び出す。
+
+    use Illuminate\Support\Facades\Route;
+    use App\Http\Controllers\PostController;      //追加
+    /*
+    |--------------------------------------------------------------------------
+    | Web Routes
+    |--------------------------------------------------------------------------
+    |
+    | Here is where you can register web routes for your application. These
+    | routes are loaded by the RouteServiceProvider within a group which
+    | contains the "web" middleware group. Now create something great!
+    |
+    */
+    Route::get('/', [PostController::class, 'index']);
+
+### PostController.phpを以下のように変更する。
+
+    <?php
+
+    namespace App\Http\Controllers;
+
+    use App\Models\Post;
+    use Illuminate\Http\Request;
+
+    class PostController extends Controller
+    {
+        public function index(Post $post)
+        {
+            return view('posts.index')->with(['posts' => $post->get()]);  
+        //blade内で使う変数'posts'と設定。'posts'の中身にgetを使い、インスタンス化した$postを代入。
+        }
+    }
+    ?>
