--- a/output/08-2/08-2_2.md
+++ b/output/08-2/08-2_2.md
@@ -124,3 +124,11 @@
 ### アプリを再度実行する
 #### $ php artisan serve --port=8080
 ※ postsテーブルに追加したデータが表示されていることを確認
+
+### 一旦Gitにコミットする
+#### $ git status
+#### $ git add .
+#### $ git status
+#### $ git commit -m "Displaying a List of Blog Posts"
+#### $ git status
+#### $git push origin dev_basis02
