--- a/output/08-2/08-2_2.md
+++ b/output/08-2/08-2_2.md
@@ -56,7 +56,7 @@
     */
     Route::get('/', [PostController::class, 'index']);
 
-### PostController.phpを以下のように変更する。
+### 「blog/app/Http/Controllers」配下にあるPostController.phpを以下のように変更する。
 
     <?php
 
