--- a/output/08-2/08-2_2.md
+++ b/output/08-2/08-2_2.md
@@ -110,7 +110,7 @@
 #### $ mysql -u dbuser blog
 #### MariaDB [blog]> show tables;
 #### MariaDB [blog]> insert into posts values (3, 'title3', 'This is body3.', now(), now(), NULL);
-### MariaDB [blog]> 
+#### MariaDB [blog]> select * from posts;
 
     +----+--------+----------------+---------------------+---------------------+------------+
     | id | title  | body           | created_at          | updated_at          | deleted_at |
