--- a/output/08-2/08-2_3.md
+++ b/output/08-2/08-2_3.md
@@ -83,3 +83,11 @@
 ### アプリを起動して、修正内容が反映されていることを確認
 #### $ php artisan serve --port=8080
 ※ 「updated_at」を降順に並べた順番で、上から１０件のみ表示されていればOK。
+
+### 一旦Gitにコミットする
+#### $ git status
+#### $ git add .
+#### $ git status
+#### $ git commit -m "Modify Display Conditions for Blog Post Listing"
+#### $ git status
+#### $git push origin dev_basis02
