--- a/output/08-2/08-2_4.md
+++ b/output/08-2/08-2_4.md
@@ -12,4 +12,34 @@
 ### PostController.phpを修正
 ※ ControllerクラスのModel呼び出し関数をgetByLimit()からgetPaginateByLimit()に変更
 
-### index.blade.phpに下記を追加
+    public function index(Post $post)
+    {
+        return view('posts.index')->with(['posts' => $post->getPaginateByLimit()]);
+    // getPaginateByLimit()はPost.phpで定義したメソッド。
+    }
+
+### index.blade.phpに下記を修正
+
+    <!DOCTYPE html>
+    <html lang="{{ str_replace('_', '-', app()->getLocale()) }}">
+        <head>
+            <meta charset="utf-8">
+            <title>Blog</title>
+            <!-- Fonts -->
+            <link href="https://fonts.googleapis.com/css?family=Nunito:200,600" rel="stylesheet">
+        </head>
+        <body>
+            <h1>Blog Name</h1>
+            <div class='posts'>
+                @foreach ($posts as $post)
+                    <div class='post'>
+                        <h2 class='title'>{{ $post->title }}</h2>
+                        <p class='body'>{{ $post->body }}</p>
+                    </div>
+                @endforeach
+            </div>
+            <div class='paginate'>
+                {{ $posts->links() }}
+            </div>
+        </body>
+    </html>
