--- a/output/08-2/08-2_4.md
+++ b/output/08-2/08-2_4.md
@@ -3,7 +3,7 @@
 ### Modelクラス（Post.php）に下記を追加
 ※ 前の項目で記述していたgetByLimitは一旦コメントアウト
 
-    public function getPaginateByLimit(int $limit_count = 10)
+    public function getPaginateByLimit(int $limit_count = 5)
     {
         // updated_atで降順に並べたあと、limitで件数制限をかける
         return $this->orderBy('updated_at', 'DESC')->paginate($limit_count);
@@ -43,3 +43,15 @@
             </div>
         </body>
     </html>
+
+### アプリを起動して、修正内容が反映されていることを確認
+#### $ php artisan serve --port=8080
+※ 「updated_at」を降順に並べた順番で、１ページあたり５件ずつ表示され、次のページに進めればOK。
+
+### 一旦Gitにコミットする
+#### $ git status
+#### $ git add .
+#### $ git status
+#### $ git commit -m "Modify Display Conditions for Blog Post Listing"
+#### $ git status
+#### $git push origin dev_basis02
