--- a/output/08-2/08-2_4.md
+++ b/output/08-2/08-2_4.md
@@ -52,6 +52,6 @@
 #### $ git status
 #### $ git add .
 #### $ git status
-#### $ git commit -m "Modify Display Conditions for Blog Post Listing"
+#### $ git commit -m "Add Pagination"
 #### $ git status
 #### $git push origin dev_basis02
