--- a/output/08-3/08-3_1.md
+++ b/output/08-3/08-3_1.md
@@ -4,3 +4,16 @@
 
 ### masterブランチへ移動（すでにmasterブランチにいる場合は不要）
 #### $ git checkout master
+
+### リモートリポジトリの最新情報をローカルリポジトリに取り込む
+#### $ git fetch
+
+### fetchした情報をローカルブランチに反映
+#### $ git merge origin/master
+
+### 作業用ブランチ作成
+#### $ git branch dev_basis03 origin/master
+※ masterリモートブランチを、「dev_basis03」という名前でローカルにブランチ作成
+
+### 作業ブランチを「dev_basis03」に切り替え
+#### $ git checkout dev_basis03
