--- a/output/08-3/08-3_2.md
+++ b/output/08-3/08-3_2.md
@@ -51,5 +51,5 @@
 
 ### アプリを起動して、修正内容が反映されていることを確認
 #### $ php artisan serve --port=8080
-※ URLの末尾に「/posts/1」を追記して開くと下記のような画面になる。  
+※ URLの末尾に「/posts/1」を追記して開くと下記のような画面が表示される。  
 ![Alt text](../../img/08-3_2_1.png)
