--- a/output/08-3/08-3_2.md
+++ b/output/08-3/08-3_2.md
@@ -49,7 +49,17 @@
     //'post'はbladeファイルで使う変数。中身は$postはid=1のPostインスタンス。
     }
 
+## View
+
+### show.blade.phpを下記のように修正して、一覧に表示されるタイトルをリンクに変更
+※ クリックして詳細画面に遷移する。
+
+    <h2 class='title'>
+        <a href="/posts/{{ $post->id }}">{{ $post->title }}</a>
+    </h2>
+
 ### アプリを起動して、修正内容が反映されていることを確認
 #### $ php artisan serve --port=8080
-※ URLの末尾に「/posts/1」を追記して開くと下記のような画面が表示される。  
+※ URLの末尾に「/posts/」を追記してタイトルをクリックすると下記のような画面が表示されたらOK。
+※ また、戻るをクリックして一覧画面に戻ったらOK。    
 ![Alt text](../../img/08-3_2_1.png)
