--- a/output/08-3/08-3_2-3.md
+++ b/output/08-3/08-3_2-3.md
@@ -63,3 +63,11 @@
 ※ URLの末尾に「/posts/」を追記してタイトルをクリックすると下記のような画面が表示されたらOK。
 ※ また、戻るをクリックして一覧画面に戻ったらOK。    
 ![Alt text](../../img/08-3_2_1.png)
+
+### 一旦Gitにコミットする
+#### $ git status
+#### $ git add .
+#### $ git status
+#### $ git commit -m "Creation of Blog Post Detail Page"
+#### $ git status
+#### $git push origin dev_basis03
