--- a/input/08-4.md
+++ b/input/08-4.md
@@ -1,6 +1,6 @@
 ## ① HTTP通信におけるリクエストパラメータとは何か。
 
-
+クライアントがサーバーに対してHTTPリクエストを行う際に、リクエスト本文やURLの一部として添付される情報のこと。
 
 ## ② GETリクエスト・POSTリクエストでのリクエストパラメータの送信方法の違いは？
 
