--- a/input/08-4.md
+++ b/input/08-4.md
@@ -8,6 +8,12 @@
 例 → 「https://example.com/resource?param1=value1&param2=value2」
 * POSTリクエスト：主にデータの送信に使用され、データはリクエストの本文に格納される。
 
+    POST /resource HTTP/1.1
+    Host: example.com
+    Content-Type: application/x-www-form-urlencoded
+
+    param1=value1&param2=value2
+
 ## ③ HTTPにおけるリダイレクトとは何か。
 
 
