--- a/input/08-4.md
+++ b/input/08-4.md
@@ -16,7 +16,12 @@ param1=value1&param2=value2
 
 ## ③ HTTPにおけるリダイレクトとは何か。
 
-
+あるURLに訪れたユーザーを別のURLに自動的に誘導・転送するための仕組みのこと。ページの引っ越し先を指示しておくことで、古いURLしか知らないユーザーを、迷わず新しいURLへ導くことができる。主に下記の場面で必要な仕組みである。
+* サイト移転・リニューアルでURLを変更するとき
+* サイトのドメインを変更するとき
+* PCサイトとスマートフォンサイトのURLが異なるとき
+* サイトメンテナンスページへ一時的に転送したいとき
+* 期間限定キャンペーンページなどへ一定期間だけ転送したいとき
 
 ## ④ Laravelのモデルクラスにおいて、データを作成するにはどのような実装を行うか。
 
