--- a/input/08-4.md
+++ b/input/08-4.md
@@ -25,6 +25,17 @@ param1=value1&param2=value2
 
 ## ④ Laravelのモデルクラスにおいて、データを作成するにはどのような実装を行うか。
 
+モデルは、「app/Models」ディレクトリに保存される。例えば「app/Models/User.php」という名前のモデルを作成するとしたら、下記のように記述する。
 
+  // app/Models/User.php
+
+  namespace App\Models;
+
+  use Illuminate\Database\Eloquent\Model;
+
+  class User extends Model
+  {
+      // モデルのプロパティやメソッドを定義
+  }
 
 ## ⑤ Laravelにおけるリクエストクラスとは何か。また、どのようなことができるか。
