--- a/input/08-4.md
+++ b/input/08-4.md
@@ -40,4 +40,20 @@
         // モデルのプロパティやメソッドを定義
     }
 
+次にデータを作成する際は、createメソッドやsaveメソッドを使用する。
+
+  // 例1: createメソッドを使用
+  $user = \App\Models\User::create([
+      'name' => 'John Doe',
+      'email' => 'john@example.com',
+      'password' => bcrypt('password123'),
+  ]);
+
+  // 例2: インスタンスを作成してsaveメソッドを使用
+  $user = new \App\Models\User;
+  $user->name = 'Jane Doe';
+  $user->email = 'jane@example.com';
+  $user->password = bcrypt('password456');
+  $user->save();
+
 ## ⑤ Laravelにおけるリクエストクラスとは何か。また、どのようなことができるか。
