--- a/input/08-4.md
+++ b/input/08-4.md
@@ -40,7 +40,7 @@
         // モデルのプロパティやメソッドを定義
     }
 
-次にcreateメソッドやsaveメソッドを使用して、ユーザーレコードをデータベースに挿入している。
+次にcreateメソッドやsaveメソッドを使用して、ユーザーレコードをデータベースに挿入する。
 
     // 例1: createメソッドを使用
     $user = \App\Models\User::create([
