--- a/input/08-4.md
+++ b/input/08-4.md
@@ -27,8 +27,8 @@
 
 ## ④ Laravelのモデルクラスにおいて、データを作成するにはどのような実装を行うか。
 
-まずはモデルを作成する。  
-モデルは「app/Models」ディレクトリに保存される。例えば「app/Models/User.php」という名前のモデルを作成するとしたら、下記のように記述する。
+まずはモデルを作成する。モデルは「app/Models」ディレクトリに保存される。  
+例えば「app/Models/User.php」という名前のモデルを作成するとしたら、下記のように記述する。
 
     // app/Models/User.php
 
