--- a/input/08-4.md
+++ b/input/08-4.md
@@ -58,3 +58,10 @@
     $user->save();
 
 ## ⑤ Laravelにおけるリクエストクラスとは何か。また、どのようなことができるか。
+
+HTTPリクエストの情報を扱うためのクラスであり、通常はコントローラーで利用される。リクエストに関連するデータを取得・検証・処理するのに便利なメソッドや機能を提供している。下記のような操作が可能である。
+* リクエストデータの取得
+* バリデーション
+* フォームデータの整理
+* セッションデータへのアクセス
+* ユーザーエージェントやIPアドレスの取得
