--- a/output/08-4/08-4_1.md
+++ b/output/08-4/08-4_1.md
@@ -1,1 +1,20 @@
 # 開発用Gitブランチの準備
+
+## 作業用Gitブランチ作成
+
+### masterブランチへ移動（すでにmasterブランチにいる場合は不要）
+#### $ git checkout master
+
+### リモートリポジトリの最新情報をローカルリポジトリに取り込む
+#### $ git fetch
+
+### fetchした情報をローカルブランチに反映
+#### $ git merge origin/master
+
+### 作業用ブランチ作成
+#### $ git branch dev_basis04 origin/master
+※ masterリモートブランチを、「dev_basis04」という名前でローカルにブランチ作成
+
+### 作業ブランチを「dev_basis04」に切り替え
+#### $ git checkout dev_basis04
+※ 「~/blog」の隣が「（dev_basis04）」となっていたらOK。
