--- a/output/08-4/08-4_2.md
+++ b/output/08-4/08-4_2.md
@@ -1,6 +1,45 @@
 # ブログ投稿作成画面の作成
 
 ## ブログ投稿作成画面用Viewファイル作成
+※ 完成イメージは下記の通り。  
+![Alt text](../../img/08-4_2_1.png)
+
+### Form領域を準備する
+※ 「~/blog/resources/views/posts」配下に、create.blade.phpを作成して下記を記載する。
+
+    <!DOCTYPE HTML>
+    <html lang="{{ str_replace('_', '-', app()->getLocale()) }}">
+        <head>
+            <meta charset="utf-8">
+            <title>Blog</title>
+        </head>
+        <body>
+            <h1>Blog Name</h1>
+            <!-- action属性はフォームが送信されたときにデータが送信される先のURLを指定している。 -->
+            <!-- method属性はフォームデータの送信方法を指定しており、データがURLに直接表示されないようにPOSTリクエストを指定する。 -->
+            <form action="/posts" method="POST">
+                <!-- CSRFというセキュリティ脅威からアプリを守るため、Formタグの内側に「@csrf」と挿入する。 -->
+                @csrf
+                <div class="title">
+                    <h2>Title</h2>
+                    <!-- 改行が不要で選択肢が不要なフリーテキストタイプは、type属性にtextを使用する。 -->
+                    <!-- name属性でフォームに名前をつけ、入力内容をその名前の配列として格納できる。 -->
+                    <!-- 開始タグの最後を「/>」と記載すると、終了タグを省略できる。 -->
+                    <input type="text" name="post[title]" placeholder="タイトル"/>
+                </div>
+                <div class="body">
+                    <h2>Body</h2>
+                    <!-- 改行が可能で選択肢が不要なフリーテキストタイプは、type属性にtextareaを使用する。 -->
+                    <textarea name="post[body]" placeholder="今日も1日お疲れさまでした。"></textarea>
+                </div>
+
+                <input type="submit" value="store"/>
+            </form>
+            <div class="footer">
+                <a href="/">戻る</a>
+            </div>
+        </body>
+    </html>
 
 ## ブログ投稿一覧画面へのブログ投稿作成画面表示用導線追加
 
