--- a/output/08-4/08-4_2.md
+++ b/output/08-4/08-4_2.md
@@ -5,7 +5,7 @@
 ![Alt text](../../img/08-4_2_1.png)
 
 ### Form領域を準備する
-※ 「~/blog/resources/views/posts」配下に、create.blade.phpを作成して下記を記載する。
+※ 「blog/resources/views/posts」配下に、create.blade.phpを作成して下記を記載する。
 
     <!DOCTYPE HTML>
     <html lang="{{ str_replace('_', '-', app()->getLocale()) }}">
@@ -32,7 +32,7 @@
                     <!-- 改行が可能で選択肢が不要なフリーテキストタイプは、type属性にtextareaを使用する。 -->
                     <textarea name="post[body]" placeholder="今日も1日お疲れさまでした。"></textarea>
                 </div>
-
+                <!-- Form領域の送信を実行するときは、type属性にsubmitを使用する。 -->
                 <input type="submit" value="store"/>
             </form>
             <div class="footer">
@@ -42,7 +42,34 @@
     </html>
 
 ## ブログ投稿一覧画面へのブログ投稿作成画面表示用導線追加
+※ 「blog/resources/views/posts」配下にある、index.blade.phpに下記を追加する。
+
+    <a href='/posts/create'>create</a>
 
 ## ブログ投稿作成画面表示用ルーティングの追加
+※ 「blog/routes」配下にある、web.phpに下記を追加する。
+※ 必ず`Route::get('/posts/{post}', [PostController::class,'show']);`の上に書く。
+
+    Route::get('/posts/create', [PostController::class, 'create']);
 
 ## ブログ投稿作成画面表示用のコントローラー実装
+※ 「blog/app/Http/Controllers」配下にある、PostController.phpに下記を追加する。
+
+    public function create()
+    {
+        return view('posts.create');
+    }
+
+### アプリを起動して、修正内容が反映されていることを確認
+#### $ php artisan serve --port=8080
+※ URLの末尾に「/posts/」を追記したら、表示されたページの「create」をクリックして下記のような画面が表示されたらOK。
+※ また、戻るをクリックして一覧画面に戻ったらOK。    
+![Alt text](../../img/08-4_2_2.png)
+
+### 一旦Gitにコミットする
+#### $ git status
+#### $ git add .
+#### $ git status
+#### $ git commit -m "Create Blog Post Form"
+#### $ git status
+#### $git push origin dev_basis04
