--- a/output/08-4/08-4_2.md
+++ b/output/08-4/08-4_2.md
@@ -42,18 +42,18 @@
     </html>
 
 ## ブログ投稿一覧画面へのブログ投稿作成画面表示用導線追加
-※ 「blog/resources/views/posts」配下にある、index.blade.phpに下記を追加する。
+### 「blog/resources/views/posts」配下にある、index.blade.phpに下記を追加する。
 
     <a href='/posts/create'>create</a>
 
 ## ブログ投稿作成画面表示用ルーティングの追加
-※ 「blog/routes」配下にある、web.phpに下記を追加する。
+### 「blog/routes」配下にある、web.phpに下記を追加する。
 ※ 必ず`Route::get('/posts/{post}', [PostController::class,'show']);`の上に書く。
 
     Route::get('/posts/create', [PostController::class, 'create']);
 
 ## ブログ投稿作成画面表示用のコントローラー実装
-※ 「blog/app/Http/Controllers」配下にある、PostController.phpに下記を追加する。
+### 「blog/app/Http/Controllers」配下にある、PostController.phpに下記を追加する。
 
     public function create()
     {
