--- a/output/08-4/08-4_3.md
+++ b/output/08-4/08-4_3.md
@@ -34,11 +34,13 @@
 ### アプリを起動して、修正内容が反映されていることを確認
 #### $ php artisan serve --port=8080
 ※ URLの末尾に「/posts/」を追記したら、表示されたページの「create」をクリックしてTitleとBodyを入力してstoreをクリックする。  
-※ ページが下記画像のように遷移され、URLが下記画像のようになっていたらOK。  
+※ 遷移した後のページが下記画像のように表示され、URLが下記画像のようになっていたらOK。  
 ![Alt text](../../img/08-4_3_2.png)![Alt text](../../img/08-4_3_1.png)
 
 ### データベースで入力内容が保存されているか確認
 #### $ mysql -u dbuser -p blog
+#### MariaDB [blog]> select * from posts;
+※ 先ほどのURLに表示されていたidと同じ17番目に、入力内容が挿入されていればOK。
 
     +----+---------+-----------------+---------------------+---------------------+------------+
     | id | title   | body            | created_at          | updated_at          | deleted_at |
@@ -62,3 +64,11 @@
     | 17 | test    | aaa             | 2024-01-18 15:11:05 | 2024-01-18 15:11:05 | NULL       |
     +----+---------+-----------------+---------------------+---------------------+------------+
     17 rows in set (0.000 sec)
+
+### 一旦Gitにコミットする
+#### $ git status
+#### $ git add .
+#### $ git status
+#### $ git commit -m "Implementation of Blog Post Creation Page Saving Process"
+#### $ git status
+#### $git push origin dev_basis04
