--- a/output/08-5/08-5_6.md
+++ b/output/08-5/08-5_6.md
@@ -1,1 +1,17 @@
 # GitHubへの反映
+
+# GitHubへの反映
+
+## GitHub上でのブランチマージ
+
+### GitHubからリモートリポジトリを開き、「Compare & pull request」をクリック
+
+### マージ元がdev_basis05、マージ先がmasterとなっていることを確認
+
+### タイトルとコメントを入力
+
+### 「Create pull request」をクリック
+
+### 「Merge pull request」をクリック
+
+### 「Confirm merge」をクリック
