--- a/output/08-5/08-5_2-5.md
+++ b/output/08-5/08-5_2-5.md
@@ -1,6 +1,10 @@
 # ブログ投稿編集画面の作成
 
 ## ブログ投稿編集関連のルーティング追加
+### 「blog/routes」配下にある、web.phpに下記を追加する。
+
+    Route::get('/posts/{post}/edit', [PostController::class, 'edit']);
+    Route::put('/posts/{post}', [PostController::class, 'update']);
 
 ## ブログ投稿編集画面のViewファイル作成
 
