--- a/output/08-5/08-5_2-5.md
+++ b/output/08-5/08-5_2-5.md
@@ -6,10 +6,25 @@
     Route::get('/posts/{post}/edit', [PostController::class, 'edit']);
     Route::put('/posts/{post}', [PostController::class, 'update']);
 
+## ブログ投稿編集画面表示用のコントローラー実装
+### 「blog/app/Http/Controllers」配下にある、PostController.phpに下記を追加する。
+
+    public function edit(Post $post)
+    {
+        return view('posts.edit')->with(['post' => $post]);
+    }
+
+## ブログ投稿編集実行用のコントローラー実装
+### 「blog/app/Http/Controllers」配下にある、PostController.phpに下記を追加する。
+
+    public function update(PostRequest $request, Post $post)
+    {
+        $input_post = $request['post'];
+        $post->fill($input_post)->save();
+
+        return redirect('/posts/' . $post->id);
+    }
+
 ## ブログ投稿編集画面のViewファイル作成
 
 ## ブログ投稿詳細画面へのブログ投稿編集画面表示用導線追加
-
-## ブログ投稿編集画面表示用のコントローラー実装
-
-## ブログ投稿編集実行用のコントローラー実装
