--- a/output/08-5/08-5_2-5.md
+++ b/output/08-5/08-5_2-5.md
@@ -26,5 +26,29 @@
     }
 
 ## ブログ投稿編集画面のViewファイル作成
+### 「blog/resources/views/posts」配下に、edit.blade.phpを作成して下記のように記述する。
+
+    <!-- body内だけを表示している。 -->
+    <body>
+        <h1 class="title">編集画面</h1>
+        <div class="content">
+            <form action="/posts/{{ $post->id }}" method="POST">
+                @csrf
+                @method('PUT')
+                <div class='content__title'>
+                    <h2>タイトル</h2>
+                    <input type='text' name='post[title]' value="{{ $post->title }}">
+                </div>
+                <div class='content__body'>
+                    <h2>本文</h2>
+                    <input type='text' name='post[body]' value="{{ $post->body }}">
+                </div>
+                <input type="submit" value="保存">
+            </form>
+        </div>
+    </body>
 
 ## ブログ投稿詳細画面へのブログ投稿編集画面表示用導線追加
+### 「blog/resources/views/posts」配下にある、show.blade.phpに下記を追加する。
+
+    <div class="edit"><a href="/posts/{{ $post->id }}/edit">edit</a></div>
