--- a/output/08-5/08-5_2-5.md
+++ b/output/08-5/08-5_2-5.md
@@ -52,3 +52,13 @@
 ### 「blog/resources/views/posts」配下にある、show.blade.phpに下記を追加する。
 
     <div class="edit"><a href="/posts/{{ $post->id }}/edit">edit</a></div>
+
+### アプリを起動して、修正内容が反映されていることを確認
+#### $ php artisan serve --port=8080
+※ ブログ投稿一覧の詳細画面に遷移し、「edit」ボタンから内容を変更したあと、「保存」をクリックして内容が変更されていればOK。
+
+### 一旦Gitにコミットする
+#### $ git status
+#### $ git add .
+#### $ git status
+#### $ git commit -m "Edit Blog Post"
