--- a/input/08-5.md
+++ b/input/08-5.md
@@ -1,1 +1,11 @@
 ## ① Laravelのモデルクラスにおいて、データを変更するにはどのような実装を行うか。
+
+PostControllerクラスに、下記のようなupdateメソッドを記載する。
+
+    public function update(PostRequest $request, Post $post)
+    {
+        $input_post = $request['post'];
+        $post->fill($input_post)->save();
+
+        return redirect('/posts/' . $post->id);
+    }
