--- a/output/08-6/08-6_2.md
+++ b/output/08-6/08-6_2.md
@@ -15,5 +15,26 @@
     }
 
 ## ブログ投稿一覧画面へのブログ投稿削除実行用導線追加
+### 「blog/resources/views/posts」配下にある、index.blade.phpに下記を追加する。
+※ pタグの下に書く。
+
+    <form action="/posts/{{ $post->id }}" id="form_{{ $post->id }}" method="post">
+        @csrf
+        @method('DELETE')
+        <button type="button" onclick="deletePost({{ $post->id }})">delete</button> 
+    </form>
+
+### 「blog/resources/views/posts」配下にある、index.blade.phpに下記を追加する。
+※ bodyの閉じタグの上に書く。
+
+    <script>
+    function deletePost(id) {
+        'use strict'
+
+        if (confirm('削除すると復元できません。\n本当に削除しますか？')) {
+            document.getElementById(`form_${id}`).submit();
+        }
+    }
+    </script>
 
 ## ブログ投稿用モデルクラス修正
