--- a/input/08-5.md
+++ b/input/08-5.md
@@ -9,3 +9,10 @@ PostControllerクラスに、下記のようなupdateメソッドを記載する
 
         return redirect('/posts/' . $post->id);
     }
+
+* `$input_post = $request['post'];`  
+  PostRequestクラスの処理をした\$request（入力したタイトルと本文が格納されている）から、キーがpostのものを\$input_postに代入している。
+* `$post->fill($input_post)->save();`  
+  Postクラスの処理をした\$postにfillメソッドを呼び出して処理し、その結果に対してさらにsaveメソッドを呼び出して処理している。つまり入力内容をデータベースに保存する処理を行っている。
+* `return redirect('/posts/' . $post->id);`  
+  更新するボタンをクリックした後に表示される画面のURLを指定している。
