--- a/input/08-6.md
+++ b/input/08-6.md
@@ -1,5 +1,10 @@
 ## ① 物理削除と論理削除の違いは何か。また、それぞれのメリット・デメリットは何か。
 
-
+* 物理削除：データベースから対象の行（レコード）を完全に削除すること。
+  * メリット → データベースの容量が縮小させることで、パフォーマンスが向上する。
+  * デメリット → 一度削除されると復元ができないため、誤って重要なデータを削除する可能性に配慮する。
+* 論理削除：特別なフラグや状態を変更することによって、論理的に削除されたとみなすこと。実際は削除されていない。
+  * メリット → データの復元が可能であり、履歴を維持できる。
+  * デメリット → 論理削除を実装するためには追加の仕組みが必要であり、データベースの容量が増加する可能性がある。
 
 ## ② Laravelのモデルクラスにおいて、データを論理削除するにはどのような実装を行うか。
