--- a/output/08-6/08-6_2.md
+++ b/output/08-6/08-6_2.md
@@ -38,3 +38,12 @@
     </script>
 
 ## ブログ投稿用モデルクラス修正
+### 「blog/app/Models」配下にある、Post.phpに下記を追加する。
+※ class定義より前のuse定義に書く。
+
+    use Illuminate\Database\Eloquent\SoftDeletes;
+
+### 「blog/app/Models」配下にある、Post.phpに下記を追加する。
+※ class定義直後のuse定義に書く。
+
+    use SoftDeletes;
