--- a/input/08-6.md
+++ b/input/08-6.md
@@ -8,3 +8,8 @@
   * デメリット → 論理削除を実装するためには追加の仕組みが必要であり、データベースの容量が増加する可能性がある。
 
 ## ② Laravelのモデルクラスにおいて、データを論理削除するにはどのような実装を行うか。
+
+下記を実行することにより、発行されるSQLがUPDATE文になり、deleted_atに実行日時が設定される。論理削除が有効になっているモデルでは、deleted_atに値が設定されると以降は削除扱いとなり、検索等で引っかからないようになる。
+
+1. Postモデルのclass定義より前のuse定義に`use Illuminate\Database\Eloquent\SoftDeletes;`を追加する。
+2. Postモデルのclass定義直後に`use SoftDeletes;`を追加する。
