--- a/output/08-5/08-5_2-5.md
+++ b/output/08-5/08-5_2-5.md
@@ -55,7 +55,8 @@
 
 ### アプリを起動して、修正内容が反映されていることを確認
 #### $ php artisan serve --port=8080
-※ ブログ投稿一覧の詳細画面に遷移し、「edit」ボタンから内容を変更したあと、「保存」をクリックして内容が変更されていればOK。
+※ ブログ投稿一覧の詳細画面に遷移し、「edit」ボタンから内容を変更したあと、「保存」をクリックして内容が変更されていればOK。  
+![Alt text](../../img/08-5_2-5_1.png)![Alt text](../../img/08-5_2-5_2.png)![Alt text](../../img/08-5_2-5_3.png)
 
 ### 一旦Gitにコミットする
 #### $ git status
