--- a/input/09-1.md
+++ b/input/09-1.md
@@ -1,21 +1,59 @@
 ## ① Laravelにおけるマイグレーションとは何か。
 
-
+データベースにおけるバージョン管理システムのようなもの。マイグレーションを使用してデータベースのテーブルやカラムの作成、変更、削除などの操作をコードで定義することができ、データベースの構造変更やデータの追加、変更、削除などの情報がファイルに記録される。
 
 ## ② マイグレーションを使うメリットとは何か。
 
-
+* 開発者がどの時点でどの変更を行ったかが明確になる。
+* コマンド操作でデータベースの構造を柔軟に変更できる。
+* 開発者が異なる開発環境で同じデータベース構造を簡単に同期できる。
+* データベースの初期化やリセットおよび、特定の時点の状態へ復元するなどの操作が簡単にできる。
 
 ## ③ データベースとマイグレーションファイルはどのような関係になっているか。
 
-
+1. Artisanコマンドを使用してマイグレーションファイルを作成する。
+2. データベースの構造変更を行うためのアップ（up）とダウン（down）のメソッドを定義する。
+3. `php artisan migrate`コマンドで、マイグレーションを実行する。
+4. migrationsテーブル内にマイグレーションの実行状況を管理するためのレコードが追加され、どのマイグレーションが実行されたかが追跡できる。
+5. `php artisan migrate:rollback`コマンドを実行すれば、データベースを元の状態に戻すことができる。
 
 ## ④ マイグレーションについて、以下を行う手順はどのようなものか。
 
 ### 1. 新規テーブルを作成するマイグレーションファイルの準備
 
+1. Artisanコマンドでマイグレーションファイルを作成する。  
+   `php artisan make:migration "新しいテーブル名"`
+2. マイグレーションファイルを開き、upメソッド内で新しいテーブルを定義する。
+
+         public function up()
+         {
+             Schema::create('table_name', function (Blueprint $table) {
+                 $table->id();
+                 $table->string('column1');
+                 $table->text('column2');
+                 $table->timestamps();
+             });
+         }
+
 ### 2. 既存テーブルを変更するマイグレーションファイルの準備
+
+1. Artisanコマンドでマイグレーションファイルを作成する。  
+   `php artisan make:migration "変更するテーブル名"`
+2. マイグレーションファイルを開き、upメソッド内で変更するテーブルを定義する。
+
+         public function up()
+         {
+             Schema::table('table_name', function (Blueprint $table) {
+                 $table->string('new_column');
+                 $table->dropColumn('old_column');
+             });
+         }
 
 ### 3. マイグレーションファイルの実行
 
+下記コマンドで実行する。  
+`php artisan migrate`
+
 ## ⑤ Laravelにおけるシーディングとは何か。
+
+データベースを管理する機能の1つで、データベース構築時にダミーデータや初期データを作成するために使われる。マイグレーションと連携して使用され、マイグレーション実行後にシーディングを行う流れが一般的である。
