--- a/input/09-2.md
+++ b/input/09-2.md
@@ -1,13 +1,30 @@
 ## ① リレーションはどんなときに考える必要があるのか
 
-
+* データの結びつきがある場合：  
+  関連する情報が複数のテーブルにまたがって存在する場合にリレーションを考慮する必要がある。
+* データの整合性を維持したい場合：  
+  リレーションを使用することで、データの整合性を保ちつつ、関連データの追加や変更が可能になる。
+* 検索やクエリの効率を向上させたい場合：  
+  データの関連性を明確にし、関連データをより効率的に取得する必要があるときに使用される。
 
 ## ② テーブルのリレーションにはどんな種類があるのか
 
-
+* One-to-One：ユーザーテーブル ⇔ プロフィールテーブル
+* One-to-Many：投稿テーブル ⇔ コメントテーブル
+* Many-to-One：コメントテーブル ⇔ 投稿テーブル
+* Many-to-Many：学生テーブル ⇔ 科目テーブル
 
 ## ③ モデルを使ってリレーションを実装する手順
 
+例：「投稿 (Post)」モデルと「コメント (Comment)」モデルの一対多のリレーションの場合
 
+1. PostモデルとCommentモデルを作成する。
+2. migration ファイルに外部キーを設定する。
+3. コントローラークラスに定義してリレーションを利用する。
 
 ## ④ 一方のテーブルからリレーションで関連付けたテーブルのデータを取り出す手順
+
+例：「投稿 (Post)」モデルと「コメント (Comment)」モデルの一対多のリレーションの場合
+
+1. PostモデルとCommentモデルを作成する。
+2. コントローラークラスにcommentsメソッドやpostメソッドを定義してデータを取得する。
