--- a/output/09-1/09-1_1.md
+++ b/output/09-1/09-1_1.md
@@ -1,11 +1,20 @@
-# テーブルの新規作成
+# 開発用Gitブランチの準備
 
-## 既存のpostsテーブルを削除
+## 作業用Gitブランチ作成
 
-## 既存のpostsテーブル作成用マイグレーションファイルを削除
+### masterブランチへ移動（すでにmasterブランチにいる場合は不要）
+#### $ git checkout master
 
-## postsテーブル作成用マイグレーションファイルの生成
+### リモートリポジトリの最新情報をローカルリポジトリに取り込む
+#### $ git fetch
 
-## postsテーブル用マイグレーションファイルの編集
+### fetchした情報をローカルブランチに反映
+#### $ git merge origin/master
 
-## マイグレーション実行によるpostsテーブルの新規作成
+### 作業用ブランチ作成
+#### $ git branch dev_basis07 origin/master
+※ masterリモートブランチを、「dev_basis07」という名前でローカルにブランチ作成
+
+### 作業ブランチを「dev_basis07」に切り替え
+#### $ git checkout dev_basis07
+※ 「~/blog」の隣が「（dev_basis07）」となっていたらOK。
