--- a/output/09-1/09-1_2.md
+++ b/output/09-1/09-1_2.md
@@ -19,7 +19,28 @@
 
 ## 既存のpostsテーブル作成用マイグレーションファイルを削除
 
+### 「blog/database/migrations」配下にある、「年_月_日_時分秒_create_posts_table.php」を削除する。
+#### $ cd database/migrations
+#### $ ls -l
+
+    2014_10_12_000000_create_users_table.php
+    2014_10_12_100000_create_password_resets_table.php
+    2019_08_19_000000_create_failed_jobs_table.php
+    2019_12_14_000001_create_personal_access_tokens_table.php
+    2024_01_15_125135_create_posts_table.php   // これを消す。
+
+#### $ rm 2024_01_15_125135_create_posts_table.php
+#### $ ls -l
+
+    2014_10_12_000000_create_users_table.php
+    2014_10_12_100000_create_password_resets_table.php
+    2019_08_19_000000_create_failed_jobs_table.php
+    2019_12_14_000001_create_personal_access_tokens_table.php
+
 ## postsテーブル作成用マイグレーションファイルの生成
+
+### 構文「$ php artisan make:migration create_"生成テーブル名"_table」に従ってコマンドを実行する。
+#### $ php artisan make:migration create_posts_table
 
 ## postsテーブル用マイグレーションファイルの編集
 
