--- a/input/09-1.md
+++ b/input/09-1.md
@@ -1,6 +1,6 @@
 ## ① Laravelにおけるマイグレーションとは何か。
 
-データベースにおけるバージョン管理システムのようなもの。マイグレーションを使用してデータベースのテーブルやカラムの作成、変更、削除などの操作をコードで定義することができ、データベースの構造変更やデータの追加、変更、削除などの情報がファイルに記録される。
+データベースにおけるバージョン管理システムのようなもの。１つのマイグレーションファイルが１つのテーブルに対応しており、マイグレーションを使用してデータベースのテーブルやカラムの作成、変更、削除などの操作をコードで定義することができ、データベースの構造変更やデータの追加、変更、削除などの情報がファイルに記録される。
 
 ## ② マイグレーションを使うメリットとは何か。
 
