--- a/output/09-1/09-1_2.md
+++ b/output/09-1/09-1_2.md
@@ -40,8 +40,24 @@
 ## postsテーブル作成用マイグレーションファイルの生成
 
 ### 構文「$ php artisan make:migration create_"生成テーブル名"_table」に従ってコマンドを実行する。
+※ blogディレクトリに移動して実行する。
 #### $ php artisan make:migration create_posts_table
+
+    INFO  Migration [database/migrations/2024_01_20_120745_create_posts_table.php] created successfully.
+
+#### $ cd database/migrations
+#### $ ls -l
+
+    2014_10_12_000000_create_users_table.php
+    2014_10_12_100000_create_password_resets_table.php
+    2019_08_19_000000_create_failed_jobs_table.php
+    2019_12_14_000001_create_personal_access_tokens_table.php
+    2024_01_20_120745_create_posts_table.php   // 生成されている。
 
 ## postsテーブル用マイグレーションファイルの編集
 
 ## マイグレーション実行によるpostsテーブルの新規作成
+
+## モデルクラスマイグレーションファイルについての補足
+
+`php artisan make:model Post --migration`は、モデルクラス（Post）を生成する際にマイグレーションファイルも一緒に生成するコマンドだが、モデルクラスの名前（ここでは"Post"）を複数形にしたテーブル（ここでは"posts"）のマイグレーションファイルを生成してくれる。
