--- a/output/09-1/09-1_2.md
+++ b/output/09-1/09-1_2.md
@@ -56,6 +56,8 @@
 
 ## postsテーブル用マイグレーションファイルの編集
 
+### テーブルを生成する際に必要なカラムの情報をファイルに記載する。
+
 ## マイグレーション実行によるpostsテーブルの新規作成
 
 ## モデルクラスマイグレーションファイルについての補足
