--- a/output/09-1/09-1_2.md
+++ b/output/09-1/09-1_2.md
@@ -56,6 +56,23 @@
 
 ## postsテーブル用マイグレーションファイルの編集
 
+### 「2024_01_20_120745_create_posts_table.php」に下記を追加して、カラムを定義する。
+
+    return new class extends Migration
+    {
+        public function up()
+        {
+            Schema::create('posts', function (Blueprint $table) {
+                $table->id();
+                $table->string('title', 50);
+                $table->string('body', 200);
+                $table->timestamps();
+                $table->softDeletes();
+            });
+        }
+        
+        (以下、省略)
+
 ### テーブルを生成する際に必要なカラムの情報をファイルに記載する。
 
 ## マイグレーション実行によるpostsテーブルの新規作成
