--- a/output/09-1/09-1_2.md
+++ b/output/09-1/09-1_2.md
@@ -67,6 +67,7 @@
                 $table->string('title', 50);
                 $table->string('body', 200);
                 $table->timestamps();
+                // 論理削除処理で必要になる削除日時カラム（deleted_at）を追加したい場合に使用する。
                 $table->softDeletes();
             });
         }
