--- a/output/09-1/09-1_2.md
+++ b/output/09-1/09-1_2.md
@@ -56,7 +56,7 @@
 
 ## postsテーブル用マイグレーションファイルの編集
 
-### 「2024_01_20_120745_create_posts_table.php」に下記を追加して、カラムを定義する。
+### 「2024_01_20_120745_create_posts_table.php」に下記を追加して、テーブルを生成する際に必要なカラムの情報を定義する。
 
     return new class extends Migration
     {
@@ -74,9 +74,28 @@
         
         (以下、省略)
 
-### テーブルを生成する際に必要なカラムの情報をファイルに記載する。
-
 ## マイグレーション実行によるpostsテーブルの新規作成
+
+### php artisanコマンドを実行して、テーブルを作成する。
+#### $ php artisan migrate
+
+    2024_01_20_120745_create_posts_table ................................................... 9ms DONE
+
+### データベースで生成されているか確認する。
+#### $ mysql -u dbuser -p blog
+#### MariaDB [blog]> DESC posts;
+
+    +------------+---------------------+------+-----+---------+----------------+
+    | Field      | Type                | Null | Key | Default | Extra          |
+    +------------+---------------------+------+-----+---------+----------------+
+    | id         | bigint(20) unsigned | NO   | PRI | NULL    | auto_increment |
+    | title      | varchar(50)         | NO   |     | NULL    |                |
+    | body       | varchar(200)        | NO   |     | NULL    |                |
+    | created_at | timestamp           | YES  |     | NULL    |                |
+    | updated_at | timestamp           | YES  |     | NULL    |                |
+    | deleted_at | timestamp           | YES  |     | NULL    |                |
+    +------------+---------------------+------+-----+---------+----------------+
+    6 rows in set (0.002 sec)
 
 ## モデルクラスマイグレーションファイルについての補足
 
