--- a/output/09-1/09-1_2.md
+++ b/output/09-1/09-1_2.md
@@ -97,6 +97,13 @@
     +------------+---------------------+------+-----+---------+----------------+
     6 rows in set (0.002 sec)
 
+## 一旦Gitにコミットする
+
+#### $ git status
+#### $ git add .
+#### $ git status
+#### $ git commit -m "Creating a new table"
+
 ## モデルクラスマイグレーションファイルについての補足
 
 `php artisan make:model Post --migration`は、モデルクラス（Post）を生成する際にマイグレーションファイルも一緒に生成するコマンドだが、モデルクラスの名前（ここでは"Post"）を複数形にしたテーブル（ここでは"posts"）のマイグレーションファイルを生成してくれる。
