--- a/output/09-1/09-1_3.md
+++ b/output/09-1/09-1_3.md
@@ -7,3 +7,13 @@
 
     INFO  Migration [database/migrations/2024_01_21_203854_add_image_column_to_posts_table.php] created successfully.
 
+## postsテーブルカラム追加用マイグレーションファイルの編集
+
+### 「2024_01_21_203854_add_image_column_to_posts_table.php」に下記を追加して、postsテーブルに追加で必要なカラムの情報を定義する。
+
+    public function up()
+    {
+        Schema::table('posts', function (Blueprint $table) {
+            $table->string('image', 100)->nullable();   // nullable()をつけてNULL値を許容するように設定した。
+        });
+    }
