--- a/output/09-1/09-1_3.md
+++ b/output/09-1/09-1_3.md
@@ -17,3 +17,12 @@
             $table->string('image', 100)->nullable();   // nullable()をつけてNULL値を許容するように設定した。
         });
     }
+
+## マイグレーション実行によるpostsテーブルへのカラム追加
+
+## php artisanコマンドを実行して、テーブルへカラムを追加する。
+#### $ php artisan migrate
+
+    INFO  Running migrations.  
+
+    2024_01_21_203854_add_image_column_to_posts_table ..................................... 10ms DONE
